--- a/Read/ReadMeWiki/00.方案实践/20.高性能图片优化方案.md
+++ b/Read/ReadMeWiki/00.方案实践/20.高性能图片优化方案.md
@@ -4,31 +4,45 @@
     - 1.2 加载网络图片流程
     - 1.3 三方库加载图片逻辑
     - 1.4 从网络直接拉取图片
+    - 1.5 加载图片的流程
+    - 1.6 Bitmap能直接存储吗
 - 02.图片内存计算方式
     - 2.1 如何计算占用内存
     - 2.2 上面计算内存对吗
     - 2.3 一个像素占用内存
     - 2.4 使用API获取内存
     - 2.5 影响Bitmap内存因素
+    - 2.6 加载xhdpi和xxhdpi图片
+    - 2.7 图片一些注意事项
 - 03.大图的内存优化
     - 3.1 常见图片压缩
     - 3.2 图片尺寸压缩
-    - 3.3 图片内存压缩
+    - 3.3 图片质量压缩
+    - 3.4 双线性采样压缩
+    - 3.5 高清图分片加载
+    - 3.6 图片综合压缩
 - 04.色彩格式及内存优化
     - 4.1 RGB颜色种类
     - 4.2 ARGB色彩模式
     - 4.3 改变色彩格式优化
 - 05.缓存的使用实践优化
-    - 5.1 内存缓存
-    - 5.2 使用磁盘缓存
+    - 5.1 Lru内存缓存
+    - 5.2 Lru内存注意事项
+    - 5.3 使用Lru磁盘缓存
 - 06.不同版本对Bitmap管理
     - 6.1 演变进程
     - 6.2 管理Bitmap内存
     - 6.3 提高Bitmap复用
 - 07.图片其他方面优化
     - 7.1 减少PNG图片的使用
-    - 7.2 切割圆角优化
-- 08.图片资源的压缩
+    - 7.2 控件切割圆角优化
+    - 7.3 如何给图片置灰色
+    - 7.4 如何处理图片旋转呢
+    - 7.5 保存图片且刷相册
+    - 7.6 统一图片域名优化
+    - 7.7 优化H5图片加载
+    - 7.8 优化图片阴影效果
+    - 7.9 图片资源的压缩
 
 
 
@@ -38,14 +52,14 @@
 - 移动设备的系统资源有限，所以应用应该尽可能的降低内存的使用。
     - 在应用运行过程中，Bitmap （图片）往往是内存占用最大的一个部分，Bitmap 图片的加载和处理，通常会占用大量的内存空间，所以在操作 Bitmap 时，应该尽可能的小心。
 - Bitmap 会消耗很多的内存，特别是诸如照片等内容丰富的大图。
-    - 例如，一个手机拍摄的 2700 * 1900 像素的照片，需要 5.1M 的存储空间，但是在图像解码配置 ARGB_8888（Android 2.3开始的默认配置）时，它加载到内存需要 19.6M 内存空间（2592 * 1936 * 4 bytes），从而迅速消耗掉该应用的剩余内存空间。
+    - 例如，一个手机拍摄的 2700 * 1900 像素的照片，需要 5.1M 的存储空间，但是在图像解码配置 ARGB_8888 时，它加载到内存需要 19.6M 内存空间（2592 * 1936 * 4 bytes），从而迅速消耗掉该应用的剩余内存空间。
     - OOM 的问题也是我们常见的严重问题，OOM 的产生的一个主要场景就是在大图片分配内存的时候产生的，如果 APP 可用内存紧张，这时加载了一张大图，内存空间不足以分配该图片所需要的内存，就会产生 OOM，所以控制图片的高效使用是必备技能。
 
 
 #### 1.2 加载网络图片流程
 - 这一部分压缩和缓存图片，在glide源码分析的文章里已经做出了比较详细的说明。在这里简单说一下图片请求加载过程……
 - 在使用App的时候，会经常需要加载一些网络图片，一般的操作步骤大概是这样的：
-    - 第一步从网络加载图片：一般都是通过网络拉取的方式去服务器端获取到图片的文件流后，再通过BitmapFactory.decodeStream(InputStreamin)来加载图片Bitmap。
+    - 第一步从网络加载图片：一般都是通过网络拉取的方式去服务器端获取到图片的文件流后，再通过BitmapFactory.decodeStream(InputStream)来加载图片Bitmap。
     - 第二步这种压缩图片：网络加载图片方式加载一两张图片倒不会出现问题，但是如果短时间内加载十几张或者几十张图片的时候，就很有可能会造成OOM（内存溢出），因为现在的图片资源大小都是非常大的，所以我们在加载图片之前还需要进行相应的图片压缩处理。
     - 第三步变换图片：比如需要裁剪，切割圆角，旋转，添加高斯模糊等属性。
     - 第四步缓存图片：但又有个问题来了，在使用移动数据的情况下，如果用户每次进入App的时候都会去进行网络拉取图片，这样就会非常的浪费数据流量，这时又需要对图片资源进行一些相应的内存缓存以及磁盘缓存处理，这样不仅节省用户的数据流量，还能加快图片的加载速度。
@@ -60,54 +74,25 @@
 #### 1.4 从网络直接拉取图片
 - **直接通过网络请求将网络图片转化成bitmap**
     - 在这将采用最原生的网络请求方式HttpURLConnection方式进行图片获取。
-    - 经过测试，请求8张图片，耗时毫秒值174。一般是通过get请求拉取图片的。这种方法应该是最基础的网络请求，大家也可以回顾一下，一般开发中很少用这种方式加载图片。
-    - 如何加载一个图片呢？可以看看BitmapFactory类为我们提供了四类方法来加载Bitmap：decodeFile、decodeResource、decodeStream、decodeByteArray；也就是说Bitmap，Drawable，InputStream，Byte[] 之间是可以进行转换。
-    ```
-    /**
-     * 请求网络图片转化成bitmap
-     * @param url                       url
-     * @return                          将url图片转化成bitmap对象
-     */
-    private static long time = 0;
-    public static Bitmap returnBitMap(String url) {
-        long l1 = System.currentTimeMillis();
-        URL myFileUrl = null;
-        Bitmap bitmap = null;
-        HttpURLConnection conn = null;
-        InputStream is = null;
-        try {
-            myFileUrl = new URL(url);
-        } catch (MalformedURLException e) {
-            e.printStackTrace();
-        }
-        try {
-            conn = (HttpURLConnection) myFileUrl.openConnection();
-            conn.setRequestMethod("GET");
-            conn.setConnectTimeout(10000);
-            conn.setReadTimeout(5000);
-            conn.setDoInput(true);
-            conn.connect();
-            is = conn.getInputStream();
-            bitmap = BitmapFactory.decodeStream(is);
-        } catch (IOException e) {
-            e.printStackTrace();
-        } finally {
-            try {
-                if (is != null) {
-                    is.close();
-                    conn.disconnect();
-                }
-            } catch (IOException e) {
-                e.printStackTrace();
-            }
-            long l2 = System.currentTimeMillis();
-            time = (l2-l1) + time;
-            LogUtils.e("毫秒值"+time);
-        }
-        return bitmap;
-    }
-    ```
+    - 经过测试，请求8张图片，耗时毫秒值174。一般是通过get请求拉取图片的。这种方法应该是最基础的网络请求，大家也可以回顾一下，一般开发中很少用这种方式加载图片。具体可以看：[ImageToolLib](https://github.com/yangchong211/YCAppTool/tree/master/CommonLib/ImageToolLib)
+- 如何加载一个图片呢？
+    - 可以看看BitmapFactory类为我们提供了四类方法来加载Bitmap：decodeFile、decodeResource、decodeStream、decodeByteArray；也就是说Bitmap，Drawable，InputStream，Byte[] 之间是可以进行转换。
 
+
+#### 1.5 加载图片的流程
+- 搞清楚一个图片概念
+    - 在电脑上看到的 png 格式或者 jpg 格式的图片，png(jpg) 只是这张图片的容器。是经过相对应的压缩算法将原图每个像素点信息转换用另一种数据格式表示。
+- 加载图片显示到手机
+    - 通过代码，将这张图片加载进内存时，会先解析(也就是解码操作)图片文件本身的数据格式，然后还原为位图，也就是 Bitmap 对象。
+- 图片大小vs图片内存大小
+    - 一张 png 或者 jpg 格式的图片大小，跟这张图片加载进内存所占用的大小完全是两回事。
+
+
+#### 1.6 Bitmap能直接存储吗
+- Bitmap基础概念
+    - Bitmap对象本质是一张图片的内容在手机内存中的表达形式。它将图片的内容看做是由存储数据的有限个像素点组成；每个像素点存储该像素点位置的ARGB值。每个像素点的ARGB值确定下来，这张图片的内容就相应地确定下来了。
+- Bitmap本质上不能直接存储
+    - 为什么？bitmap是一个对象，如果要存储成本地可以查看的图片文件，则必须对bitmap进行编码，然后通过io流写到本地file文件上。
 
 
 
@@ -119,11 +104,11 @@
 
 
 #### 2.2 上面计算内存对吗
-- 我看到好多博客都是这样计算的，但是这样算对吗？有没有哥们试验过这种方法正确性？我觉得看博客要对博主表示怀疑，论证别人写的是否正确。更多详细可以看我的GitHub：https://github.com/yangchong211
+- 我看到好多博客都是这样计算的，但是这样算对吗？有没有哥们试验过这种方法正确性？我觉得看博客要对博主表示怀疑，论证别人写的是否正确。
     - 说出我的结论：上面2.1这种说法也对，但是不全对，没有说明场景，同时也忽略了一个影响项：Density。接下来看看源代码。
     - inDensity默认为图片所在文件夹对应的密度；inTargetDensity为当前系统密度。
     - 加载一张本地资源图片，那么它占用的内存 = width * height * nTargetDensity/inDensity 一个像素所占的内存。
-    ```
+    ``` java
     @Nullable
     public static Bitmap decodeResourceStream(@Nullable Resources res, @Nullable TypedValue value,
             @Nullable InputStream is, @Nullable Rect pad, @Nullable Options opts) {
@@ -183,6 +168,24 @@
 
 
 
+#### 2.6 加载xhdpi和xxhdpi图片
+- 提个问题，加载xhdpi和xxhdpi中相同的图片，显示在控件上会一样吗？内存大小一样吗？为什么？
+    - 肯定是不一样的。xhdpi:240dpi--320dpi，xxhdpi:320dpi--480dpi，
+- app中设置的图片是如何从hdpi中查找的？
+    - 首先计算dpi，比如手机分辨率是1920x1080，5.1寸的手机。那么得到的dpi公式是(√￣1920² + 1080²）/5.1 =2202/5.1= 431dpi。这样优先查找xxhdpi
+    - 如果xxhdpi里没有查找图片，如果没有会往上找，遵循“先高再低”原则。如果xhdpi里有这个图片会使用xhdpi里的图片，这时候发现会比在xhdpi里的图片放大了。
+- 为何要引入不同hdpi的文件管理？
+    - 比如：xxhdpi放94x94，xhdpi放74x74，hdpi放45x45，这样不管是什么样的手机图片都能在指定的比例显示。引入多种hdpi是为了让这个图片在任何手机上都是手机的这个比例。
+
+
+
+#### 2.7 图片一些注意事项
+- 同样图片显示在大小不相同的ImageView上，内存是一样吗？
+    - 图片占据内存空间大小与图片在界面上显示的大小没有关系。
+- 图片放在res不同目录，加载的内存是一样的吗？
+    - 最终图片加载进内存所占据的大小会不一样，因为系统在加载 res 目录下的资源图片时，会根据图片存放的不同目录做一次分辨率的转换，而转换的规则是：新图的高度 = 原图高度 * (设备的 dpi / 目录对应的 dpi )
+
+
 ### 03.大图的内存优化
 #### 3.1 常见图片压缩
 - 常见压缩方法Api
@@ -196,46 +199,19 @@
     - 备注：inSampleSize值的大小不是随便设、或者越大越好，需要根据实际情况来设置。inSampleSize比1小的话会被当做1，任何inSampleSize的值会被取接近2的幂值。
 
 
+
 #### 3.2 图片尺寸压缩
+##### 3.2.1 如何理解尺寸压缩
 - 通常在大多数情况下，图片的实际大小都比需要呈现的尺寸大很多。
     - 例如，我们的原图是一张 2700 * 1900 像素的照片，加载到内存就需要 19.6M 内存空间，但是，我们需要把它展示在一个列表页中，组件可展示尺寸为 270 * 190，这时，我们实际上只需要一张原图的低分辨率的缩略图即可（与图片显示所对应的 UI 控件匹配），那么实际上 270 * 190 像素的图片，只需要 0.2M 的内存即可。
     - 可以看到，优化前后相差了 98 倍，原来显示 1 张，现在可以显示 98 张图片，效果非常显著。
 - 既然在对原图缩放可以显著减少内存大小，那么我们应该如何操作呢？
     - 先加载到内存，再进行操作吗，可以如果先加载到内存，好像也不太对，这样只接占用了 19.6M + 0.2M 2份内存了，而我们想要的是，在原图不加载到内存中，只接将缩放后的图片加载到内存中，可以实现吗？
-- 怎样才能对图片进行压缩呢？
-    - 通过设置BitmapFactory.Options中inSampleSize的值就可以实现。
-- 下面的方法可以根据传入的宽和高，计算出合适的inSampleSize值：
-    ```
-    public static int calculateInSampleSize(BitmapFactory.Options options, 
-            int reqWidth, int reqHeight) { 
-        // 源图片的高度和宽度 
-        final int height = options.outHeight; 
-        final int width = options.outWidth; 
-        int inSampleSize = 1; 
-        if (height > reqHeight || width > reqWidth) { 
-            // 计算出实际宽高和目标宽高的比率 
-            final int heightRatio = Math.round((float) height / (float) reqHeight); 
-            final int widthRatio = Math.round((float) width / (float) reqWidth); 
-            // 选择宽和高中最小的比率作为inSampleSize的值，这样可以保证最终图片的宽和高 
-            // 一定都会大于等于目标的宽和高。 
-            inSampleSize = heightRatio < widthRatio ? heightRatio : widthRatio; 
-        } 
-        return inSampleSize; 
-    }  
-    ```
-
-
-
-
-#### 3.3 图片内存压缩
-- 探讨怎么才能将缩略后的最终图片加载到内存，这样我们就不用先加载原图了，从而满足了我们节省内存的目的。
-- 要想直接加载缩略后的图片，首先我们应该知道原图的尺寸，才能判断是否需要缩小，以及缩小多少的问题。
-
-
-##### 3.2.1 读取 Bitmap 的尺寸与类型
 - BitmapFactory 提供了从不同资源创建 Bitmap 的解码方法：
     - decodeByteArray()、decodeFile()、decodeResource() 等。但是，这些方法在构造位图的时候会尝试分配内存，也就是它们会导致原图直接加载到内存了，不满足我们的需求。我们可以通过 BitmapFactory.Options 设置一些附加的标记，指定解码选项，以此来解决该问题。
     - 如何操作呢？答案来了：将 inJustDecodeBounds 属性设置为 true，可以在解码时避免内存的分配，它会返回一个 null 的 Bitmap ，但是可以获取 outWidth、outHeight 和 outMimeType 值。利用该属性，我们就可以在图片不占用内存的情况下，在图片压缩之前获取图片的尺寸。
+- 怎样才能对图片进行压缩呢？
+    - 通过设置BitmapFactory.Options中inSampleSize的值就可以实现。其计算方式大概就是：计算出实际宽高和目标宽高的比率，然后选择宽和高中最小的比率作为inSampleSize的值，这样可以保证最终图片的宽和高。
 
 
 ##### 3.2.2 设置BitmapFactory.Options属性
@@ -266,10 +242,51 @@
 
 
 
+#### 3.3 图片质量压缩
+- 在Android中，对图片进行质量压缩，通常我们的实现方式如下所示：
+    ``` java
+    //quality 为0～100，0表示最小体积，100表示最高质量，对应体积也是最大
+    bitmap.compress(Bitmap.CompressFormat.JPEG, quality , outputStream);
+    ```
+- 在上述代码中，我们选择的压缩格式是CompressFormat.JPEG，除此之外还有两个选择：
+    - 其一，CompressFormat.PNG，PNG格式是无损的，它无法再进行质量压缩，quality这个参数就没有作用了，会被忽略，所以最后图片保存成的文件大小不会有变化；
+    - 其二，CompressFormat.WEBP，这个格式是google推出的图片格式，它会比JPEG更加省空间，经过实测大概可以优化30%左右。
+- Android质量压缩逻辑，函数compress经过一连串的java层调用之后，最后来到了一个native函数：
+    - 具体看：Bitmap.cpp，最后调用了函数encoder->encodeStream(…)编码保存本地。该函数是调用skia引擎来对图片进行编码压缩。
+
+
+#### 3.4 双线性采样压缩
+- 双线性采样（Bilinear Resampling）在 Android 中的使用方式一般有两种：
+    ``` java
+    bm = Bitmap.createScaledBitmap(bitmap, bitmap.getWidth()/2, bitmap.getHeight()/2, true);
+    
+    //或者直接使用 matrix 进行缩放
+    Matrix matrix = new Matrix();
+    matrix.setScale(0.5f, 0.5f);
+    bm = Bitmap.createBitmap(bitmap, 0, 0, bit.getWidth(), bit.getHeight(), matrix, true);
+    ```
+- 看源码可以知道createScaledBitmap函数最终也是使用第二种方式的matrix进行缩放
+    - 双线性采样使用的是双线性內插值算法，这个算法不像邻近点插值算法一样，直接粗暴的选择一个像素，而是参考了源像素相应位置周围2x2个点的值，根据相对位置取对应的权重，经过计算之后得到目标图像。
+
+
+#### 3.5 高清图分片加载
+
+
+
+#### 3.6 图片综合压缩
+- 一般情况下图片综合压缩的整体思路如下：
+    - 第一步进行采样率压缩；
+    - 第二步进行宽高的等比例压缩（微信对原图和缩略图限制了最大长宽或者最小长宽）；
+    - 第三步就是对图片的质量进行压缩（一般75或者70）；
+    - 第四步就是采用webP的格式。
+- 关于图片压缩的综合案例如下
+    - 具体可以参考：[CompressServer](https://github.com/yangchong211/YCAppTool/tree/master/ServerLib/CompressServer)
+
+
 ### 04.色彩格式及内存优化
 #### 4.1 RGB颜色种类
 - RGB 色彩模式是工业界的一种颜色标准
-    - 通过对红®、绿(G)、蓝(B)三个颜色通道的变化以及它们相互之间的叠加来得到各式各样的颜色的，RGB即是代表红、绿、蓝三个通道的颜色，这个标准几乎包括了人类视力所能感知的所有颜色，是运用最广的颜色系统之一。Android 中，像素的存储方式使用的色彩模式正是 RGB 色彩模式。
+    - 通过对红(R)、绿(G)、蓝(B)三个颜色通道的变化以及它们相互之间的叠加来得到各式各样的颜色的，RGB即是代表红、绿、蓝三个通道的颜色，这个标准几乎包括了人类视力所能感知的所有颜色，是运用最广的颜色系统之一。Android 中，像素的存储方式使用的色彩模式正是 RGB 色彩模式。
 
 
 #### 4.2 ARGB色彩模式
@@ -314,7 +331,7 @@
 
 
 ### 05.缓存的使用实践优化
-#### 5.1 内存缓存
+#### 5.1 Lru内存缓存
 - LruCache 类特别适合用来缓存 Bitmap，它使用一个强引用的 LinkedHashMap 保存最近引用的对象，并且在缓存超出设定大小时，删除最近最少使用的对象。
 - 给 LruCache 确定一个合适的缓存大小非常重要，我们需要考虑几个因素：
     - 应用剩余多少可用内存？
@@ -327,7 +344,7 @@
 - LruCache是Android提供的一个缓存类，通常运用于内存缓存
     - LruCache是一个泛型类，它的底层是用一个LinkedHashMap以强引用的方式存储外界的缓存对象来实现的。
     - 为什么使用LinkedHashMap来作为LruCache的存储，是因为LinkedHashMap有两种排序方式，一种是插入排序方式，一种是访问排序方式，默认情况下是以访问方式来存储缓存对象的；LruCache提供了get和put方法来完成缓存的获取和添加，当缓存满时，会将最近最少使用的对象移除掉，然后再添加新的缓存对象。如下源码所示，底层是LinkedHashMap。
-    ```
+    ``` java
     public LruCache(int maxSize) {
         if (maxSize <= 0) {
             throw new IllegalArgumentException("maxSize <= 0");
@@ -337,7 +354,7 @@
     }
     ```
 - 在使用LruCache的时候，首先需要获取当前设备的内存容量，通常情况下会将总容量的八分之一作为LruCache的容量，然后重写LruCache的sizeof方法，sizeof方法用于计算缓存对象的大小，单位需要与分配的容量的单位一致；
-    ```
+    ``` java
     // 获取系统最大缓存
     int maxMemory = (int) (Runtime.getRuntime().maxMemory() / 1024);
     // set LruCache size;
@@ -359,8 +376,17 @@
     - 这个就要看LinkedHashMap集合的特点呢！LinkedHashMap 构造函数的第三个参数：accessOrder，传入true时， 元素会按访问顺序排列，最后访问的在遍历器最后端。在进行淘汰时，移除遍历器前端的元素，直至缓存总大小降低到指定大小以下。
 
 
+#### 5.2 Lru内存注意事项
+- 看一个真实的场景
+    - 假设我们的LruCache可以缓存80张，每次刷新从网络获取20张图片且不重复，那么在刷新第五次的时候，根据LruCache缓存的规则，第一次刷新的20张图片就会从LruCache中移出，处于等待被系统GC的状态。如果我们继续刷新n次，等待被回收的张数就会累积到 20 * n 张。
+- 会出现什么问题
+    - 会出现大量的Bitmap内存碎片，我们不知道系统什么时候会触发GC回收掉这些无用的Bitmap，对于内存是否会溢出，是否会频繁GC导致卡顿等未知问题。
+- 解决方案该怎么做？
+    - 第一种：在3.0以后引入了 BitmapFactory.Options.inBitmap，如果设置此项，需要解码的图片就会尝试使用该Bitmap的内存，这样取消了内存的动态分配，提高了性能，节省了内存。
+    - 第二种：把处于无用的状态的Bitmap放入SoftReference。SoftReference引用的对象会在内存溢出之前被回收。
 
-#### 5.2 使用磁盘缓存
+
+#### 5.3 使用Lru磁盘缓存
 - 内存缓存能够提高访问最近用过的 Bitmap 的速度，但是我们无法保证最近访问过的 Bitmap 都能够保存在缓存中。像类似 GridView 等需要大量数据填充的控件很容易就会用尽整个内存缓存。另外，我们的应用可能会被类似打电话等行为而暂停并退到后台，因为后台应用可能会被杀死，那么内存缓存就会被销毁，里面的 Bitmap 也就不存在了。一旦用户恢复应用的状态，那么应用就需要重新处理那些图片。
 - 磁盘缓存可以用来保存那些已经处理过的 Bitmap，它还可以减少那些不再内存缓存中的 Bitmap 的加载次数。当然从磁盘读取图片会比从内存要慢，而且由于磁盘读取操作时间是不可预期的，读取操作需要在后台线程中处理。
 - 注意：如果图片会被更频繁的访问，使用 ContentProvider 或许会更加合适，比如在图库应用中。
@@ -427,11 +453,11 @@
         Log.i("ycBitmap", "bitmap：ByteCount = " + bitmap.getByteCount() + ":::bitmap：AllocationByteCount = " + bitmap.getAllocationByteCount());
         Log.i("ycBitmap", "bitmapReuse：ByteCount = " + bitmapReuse.getByteCount() + ":::bitmapReuse：AllocationByteCount = " + bitmapReuse.getAllocationByteCount());
     
-        //11-26 18:24:07.971 15470-15470/com.yc.cn.ycbanner I/ycBitmap: bitmap = android.graphics.Bitmap@9739bff
-        //11-26 18:24:07.972 15470-15470/com.yc.cn.ycbanner I/ycBitmap: bitmap：ByteCount = 4346880:::bitmap：AllocationByteCount = 4346880
-        //11-26 18:24:07.994 15470-15470/com.yc.cn.ycbanner I/ycBitmap: bitmapReuse = android.graphics.Bitmap@9739bff
-        //11-26 18:24:07.994 15470-15470/com.yc.cn.ycbanner I/ycBitmap: bitmap：ByteCount = 1228800:::bitmap：AllocationByteCount = 4346880
-        //11-26 18:24:07.994 15470-15470/com.yc.cn.ycbanner I/ycBitmap: bitmapReuse：ByteCount = 1228800:::bitmapReuse：AllocationByteCount = 4346880
+        //11-26 18:24:07.971 15470-15470/com.yc.ycbanner I/ycBitmap: bitmap = android.graphics.Bitmap@9739bff
+        //11-26 18:24:07.972 15470-15470/com.yc.ycbanner I/ycBitmap: bitmap：ByteCount = 4346880:::bitmap：AllocationByteCount = 4346880
+        //11-26 18:24:07.994 15470-15470/com.yc.ycbanner I/ycBitmap: bitmapReuse = android.graphics.Bitmap@9739bff
+        //11-26 18:24:07.994 15470-15470/com.yc.ycbanner I/ycBitmap: bitmap：ByteCount = 1228800:::bitmap：AllocationByteCount = 4346880
+        //11-26 18:24:07.994 15470-15470/com.yc.ycbanner I/ycBitmap: bitmapReuse：ByteCount = 1228800:::bitmapReuse：AllocationByteCount = 4346880
     }
     ```
 
@@ -457,12 +483,77 @@
 - 方案5：遮罩
     - 还是使用setXfermode，不过与方法一不同的是：不对图片作任何更改，只在圆角之外再画一层与背景颜色相同的四个角来遮挡，在视觉上造成圆角图片的效果。
 - 那个切割圆角该怎么优化呢？
-    - 
+    - 使用方案3，可以采用自定义view，支持LinearLayout、RelativeLayout、FrameLayout、ConstraintLayout、ImageView、TextView、View、Button等设置圆角。
+    - 具体案例可见：[RoundCorners](https://github.com/yangchong211/YCAppTool/tree/master/WidgetLib/RoundCorners)
+
+
+#### 7.3 如何给图片置灰色
+- 大概的操作步骤。具体可以参考：[PicCalculateUtils](https://github.com/yangchong211/YCAppTool/blob/master/CommonLib/ImageToolLib/src/main/java/com/yc/imagetoollib/PicCalculateUtils.java)
+    - 第一步：获取原始图片的宽高，然后创建一个bitmap可变位图对象。
+    - 第二步：创建画板canvas对象，然后创建画笔paint。然后调用canvas.drawBitmap方法绘制图片
+    - 第三步：对画笔进行修饰，设置画笔颜色属性，这里使用到了ColorMatrix，核心就是设置饱和度为0，即可绘制灰色内容
+
+
+#### 7.4 如何处理图片旋转呢
+- 在Android中使用ImageView显示图片的时候发现图片显示不正，方向偏了或者倒过来了。
+    - 解决这个问题很自然想到的两步走，首先是要自动识别图像方向，计算旋转角度，然后对图像进行旋转并显示。
+- 识别图像方向
+    - 首先在这里提一个概念EXIF(Exchangeable Image File Format，可交换图像文件)。简而言之，Exif是一个标准，用于电子照相机（也包括手机、扫描器等）上，用来规范图片、声音、视屏以及它们的一些辅助标记格式。
+    - Exif支持的格式如下：图像；压缩图像文件：JPEG、DCT；非压缩图像文件：TIFF；音频；RIFF、WAV
+    - Android提供了对JPEG格式图像Exif接口支持，可以读取JPEG文件metadata信息，参见ExifInterface。这些Metadata信息总的来说大致分为三类：日期时间、空间信息（经纬度、高度）、Camera信息（孔径、焦距、旋转角、曝光量等等）。
+- 关于图像旋转
+    - 获取了图片的旋转方向后，然后再设置图像旋转。最后Bitmap提供的静态createBitmap方法，可以对图片设置旋转角度。具体看：[PicCalculateUtils](https://github.com/yangchong211/YCAppTool/blob/master/CommonLib/ImageToolLib/src/main/java/com/yc/imagetoollib/PicCalculateUtils.java)
 
 
 
+#### 7.5 保存图片且刷相册
+- 大概的操作步骤如下所示。具体可看：[ImageSaveUtils](https://github.com/yangchong211/YCAppTool/blob/master/CommonLib/ImageToolLib/src/main/java/com/yc/imagetoollib/ImageSaveUtils.java)
+    - 第一步：创建图片文件，然后将bitmap对象写到图片文件中
+    - 第二步：通过MediaStore将图片插入到共享目录相册中
+    - 第三步：发送通知，通知相册中刷新插入图片的数据。注意，获取图片资源uri刷新即可，避免刷新所有数据造成等待时间过长。
 
-### 08.图片资源的压缩
+
+#### 7.6 统一图片域名优化
+- 域名统一 
+    - 减少了10%+的重复图片下载和内存消耗。同时减少之前多域名图片加载时重复创建HTTPS请求的过程，减少图片加载时间。
+  
+
+#### 7.7 优化H5图片加载
+- 通过拦截WebView图片加载的方式，让原生图片库来下载图片之后传递图片二进制数据给WebView显示。
+- 采用OkHttp拦截资源缓存，下面是大概的思路。缓存的入口从shouldInterceptRequest出发
+    - 第一步，拿到WebResourceRequest对象中请求资源的url还有header，如果开发者设置不缓存则返回null
+    - 第二步，如果缓存，通过url判断拦截资源的条件，过滤非http，音视频等资源，这个是可自由配置缓存内容比如css，png，jpg，xml，txt等
+    - 第三步，判断本地是否有OkHttp缓存数据，如果有则直接读取本地资源，通过url找到对应的path路径，然后读取文件流，组装数据返回。
+    - 第四步，如果没有缓存数据，创建OkHttp的Request请求，将资源网络请求交给okHttp来处理，并且用它自带的缓存功能，当然如果是请求失败或者异常则返回null，否则返回正常数据
+- 关于webView图片缓存的方案，可以直接参考：[YCWebView](https://github.com/yangchong211/YCWebView)
+
+
+#### 7.8 优化图片阴影效果
+- 阴影效果有哪些实现方式
+    - 第一种：使用CardView，但是不能设置阴影颜色
+    - 第二种：采用shape叠加，存在后期UI效果不便优化
+    - 第三种：UI切图
+    - 第四种：自定义View
+    - 第五种：自定义Drawable
+- 否定上面前两种方案原因分析？
+    - 第一个方案的CardView渐变色和阴影效果很难控制，只能支持线性或者环装形式渐变，这种不满足需要，因为阴影本身是一个四周一层很淡的颜色包围，在一个矩形框的层面上颜色大概一致，而且这个CardView有很多局限性，比如不能修改阴影的颜色，不能修改阴影的深浅。所以这个思路无法实现这个需求。
+    - 第二个采用shape叠加，可以实现阴影效果，但是影响UI，且阴影部分是占像素的，而且不灵活。
+    - 第三个方案询问了一下ui。他们给出的结果是如果使用切图的话那标注的话很难标，身为一个优秀的设计师大多对像素点都和敏感，界面上的像素点有一点不协调那都是无法容忍的。
+- 网上一些介绍阴影效果方案
+    - 所有在深奥的技术，也都是为需求做准备的。也就是需要实践并且可以用到实际开发中，这篇文章不再抽象介绍阴影效果原理，理解三维空间中如何处理偏移光线达到阴影视差等，网上看了一些文章也没看明白或者理解。这篇博客直接通过调用api实现预期的效果。
+    - 多个drawable叠加，使用layer-list可以将多个drawable按照顺序层叠在一起显示，默认情况下，所有的item中的drawable都会自动根据它附上view的大小而进行缩放，layer-list中的item是按照顺序从下往上叠加的，即先定义的item在下面，后面的依次往上面叠放
+- 阴影是否占位
+    - 使用CardView阴影不占位，不能设置阴影颜色和效果
+    - 使用shape阴影是可以设置阴影颜色，但是是占位的
+- 几种方案优缺点对比分析
+    - CardView	优点：自带功能实现简单 缺点：自带圆角不一定可适配所有需求
+    - layer(shape叠加)	优点：实现形式简单 缺点：效果一般
+    - 自定义实现	优点：实现效果好可配置能力高 缺点：需要开发者自行开发
+- 关于解决阴影效果
+    - 具体各种方案的对比可以参考这个demo：[AppShadowLib](https://github.com/yangchong211/YCAppTool/tree/master/WidgetLib/AppShadowLib)
+
+
+#### 7.9 图片资源的压缩
 - 我们应用中使用的图片，设计师出的原图通常都非常大，他们通常会使用工具，经过一定的压缩，缩减到比较小一些的大小。
 - 但是，这些图片通常都有一定的可压缩空间，我在之前的项目中，对图片进行了二次压缩，整体压缩率达到了 40%~50% ，效果还是非常不错的。
 - 这里介绍下常用的，图片压缩的方法：
@@ -471,6 +562,7 @@
     - 对于色彩简单，例如，一些背景之类的图片，可以选择使用布局文件来定义（矢量图），这样就会非常节省内存了。
     - 如果包含透明度，优先使用 WebP 等格式图像。
 - 图片在上线前进行压缩处理，不但可以减少内存的使用，如果图片是网络获取的，也可以减少网络加载的流量和时间。
+    - 推荐一个图片压缩网站：[tinypng网站](https://tinypng.com/)
 
 
 
