feat：完善图片笔记文档

--- a/Read/ReadMeWiki/00.方案实践/20.高性能图片优化方案.md
+++ b/Read/ReadMeWiki/00.方案实践/20.高性能图片优化方案.md
@@ -6,6 +6,8 @@
     - 1.4 从网络直接拉取图片
     - 1.5 加载图片的流程
     - 1.6 Bitmap能直接存储吗
+    - 1.7 Bitmap创建流程
+    - 1.8 图片框架如何设计
 - 02.图片内存计算方式
     - 2.1 如何计算占用内存
     - 2.2 上面计算内存对吗
@@ -93,6 +95,35 @@
     - Bitmap对象本质是一张图片的内容在手机内存中的表达形式。它将图片的内容看做是由存储数据的有限个像素点组成；每个像素点存储该像素点位置的ARGB值。每个像素点的ARGB值确定下来，这张图片的内容就相应地确定下来了。
 - Bitmap本质上不能直接存储
     - 为什么？bitmap是一个对象，如果要存储成本地可以查看的图片文件，则必须对bitmap进行编码，然后通过io流写到本地file文件上。
+
+
+#### 1.7 Bitmap创建流程
+- 对于图片OOM，可以发现一个现象。
+    - heapsize(虚拟机的内存配置)越大越不容易 OOM，Android8.0 及之后的版本更不容易 OOM，这个该如何理解呢？
+- Bitmap对象内存的变化：
+    - 在 Android 8.0 之前，Bitmap 像素占用的内存是在 Java heap 中分配的；8.0 及之后，Bitmap 像素占用的内存分配到了 Native Heap。
+    - 由于 Native heap 的内存分配上限很大，32 位应用的可用内存在 3~4G，64 位上更大，虚拟内存几乎很难耗尽，所以推测 OOM 时 Java heap 中占用内存较多的对象是 Bitmap” 成立的情况下，应用更不容易 OOM。
+- 搞清楚Bitmap对象内存分配
+    - Bitmap 的构造方法是不公开的，在使用 Bitmap 的时候，一般都是通过 Bitmap、BitmapFactory 提供的静态方法来创建 Bitmap 实例。
+    - 以 Bitmap.createBitmap 说明了 Bitmap 对象的主要创建过程分析，可以看到 Java Bitmap 对象是在 Native 层通过 NewObject 创建的。
+    - allocateJavaPixelRef，是 8.0 之前版本为 Bitmap 像素从 Java heap 申请内存。其核心原理是Bitmap 的像素是保存在 Java 堆上。
+    - allocateHeapBitmap，是 8.0 版本为 Bitmap 像素从 Native heap 申请内存。其核心原理主要是通过 calloc 为 Bitmap 的像素分配内存，这个分配就在 Native 堆上。
+    - 更多详细内容可以看：[Bitmap对象内存分配](https://github.com/yangchong211/YCBlogs)
+
+
+#### 1.8 图片框架如何设计
+- 大多数图片框架加载流程
+    - 概括来说，图片加载包含封装，解析，下载，解码，变换，缓存，显示等操作。
+- 图片框架是如何设计的
+    - 封装参数：从指定来源，到输出结果，中间可能经历很多流程，所以第一件事就是封装参数，这些参数会贯穿整个过程；
+    - 解析路径：图片的来源有多种，格式也不尽相同，需要规范化；比如glide可以加载file，io，id，网络等各种图片资源
+    - 读取缓存：为了减少计算，通常都会做缓存；同样的请求，从缓存中取图片（Bitmap）即可；
+    - 查找文件/下载文件：如果是本地的文件，直接解码即可；如果是网络图片，需要先下载；比如glide这块是发起一个请求
+    - 解码：这一步是整个过程中最复杂的步骤之一，有不少细节；比如glide中解析图片数据源，旋转方向，图片头等信息
+    - 变换和压缩：解码出Bitmap之后，可能还需要做一些变换处理（圆角，滤镜等），还要做图片压缩；
+    - 缓存：得到最终bitmap之后，可以缓存起来，以便下次请求时直接取结果；比如glide用到三级缓存
+    - 显示：显示结果，可能需要做些动画（淡入动画，crossFade等）；比如glide设置显示的时候可以添加动画效果
+
 
 
 
@@ -270,7 +301,9 @@
 
 
 #### 3.5 高清图分片加载
-
+- 适用场景 : 当一张图片非常大 , 在手机中只需要显示其中一部分内容 , BitmapRegionDecoder 非常有用 。
+- 主要作用 : BitmapRegionDecoder 可以从图像中 解码一个矩形区域 。相当于手在滑动的过程中，计算当前显示区域的图片绘制出来。
+- 基本使用流程 : 先创建，后解码 。调用 newInstance 方法 , 创建 BitmapRegionDecoder 对象 ；然后调用 decodeRegion 方法 , 获取指定 Rect 矩形区域的解码后的 Bitmap 对象
 
 
 #### 3.6 图片综合压缩
@@ -384,6 +417,7 @@
 - 解决方案该怎么做？
     - 第一种：在3.0以后引入了 BitmapFactory.Options.inBitmap，如果设置此项，需要解码的图片就会尝试使用该Bitmap的内存，这样取消了内存的动态分配，提高了性能，节省了内存。
     - 第二种：把处于无用的状态的Bitmap放入SoftReference。SoftReference引用的对象会在内存溢出之前被回收。
+    - 关于Lru缓存案例和代码可以参考：[AppLruCache](https://github.com/yangchong211/YCAppTool/tree/master/CommonLib/AppLruCache)
 
 
 #### 5.3 使用Lru磁盘缓存
@@ -553,6 +587,7 @@
     - 具体各种方案的对比可以参考这个demo：[AppShadowLib](https://github.com/yangchong211/YCAppTool/tree/master/WidgetLib/AppShadowLib)
 
 
+
 #### 7.9 图片资源的压缩
 - 我们应用中使用的图片，设计师出的原图通常都非常大，他们通常会使用工具，经过一定的压缩，缩减到比较小一些的大小。
 - 但是，这些图片通常都有一定的可压缩空间，我在之前的项目中，对图片进行了二次压缩，整体压缩率达到了 40%~50% ，效果还是非常不错的。
@@ -566,8 +601,6 @@
 
 
 
-### 参考和学习
-- 抖音 Android 性能优化：https://juejin.cn/post/7096059314233671694
 
 
 
