--- a/Business/JetpackBusiness/src/main/res/values/strings.xml
+++ b/Business/JetpackBusiness/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">AnimBusiness</string>
+    <string name="app_name">Jetpack</string>
     <string name="top_line">M5,10 l14,0</string>
     <string name="middle_line">M5,12 l14,0</string>
     <string name="bottom_line">M5,14 l14,0</string>
