feat：完善视频笔记

--- a/Read/ReadMeWiki/09.问题思考/03.Android问题汇总.md
+++ b/Read/ReadMeWiki/09.问题思考/03.Android问题汇总.md
@@ -68,8 +68,7 @@
 #### 2.2 View工作流程
 - LinerLayout跟RelativeLayout的绘制原理？RelativeLayout两次都测量什么……？
 - View绘制流程，当一个TextView的实例调用setText()方法后执行了什么？请说一下原理……
-- Requestlayout，onlayout，onDraw，DrawChild区别与联系？
-- 什么是MeasureSpec，主要作用是什么？getWidth()方法和getMeasureWidth()区别呢？
+- 什么是MeasureSpec，主要作用是什么？包含三种布局模式分别是什么？getWidth()方法和getMeasureWidth()区别呢？
 
 
 #### 2.3 ViewRoot和DecorView
@@ -83,8 +82,10 @@
 - 点击事件被拦截，但是想传到下面的View，如何操作？
 - RecyclerView 滑动卡顿，请分析原因，并提供解决方案。TraceView 都能看到哪些成分？
 
+
 #### 3.2 事件分发
 - 事件传递流程是什么？主要有哪些方法，请说一下这些方法的作用……
+
 
 #### 3.3 触摸事件
 - 事件分发中的onTouch 和onTouchEvent 有什么区别，又该如何使用？
@@ -105,6 +106,11 @@
 
 #### 4.2 ThreadLocal
 - ThreadLocal是如何做到线程间的不共享数据的，ThreadLocalMap里面的key和value是什么。
+
+
+#### 4.3 同步消息屏障
+- 什么是消息同步屏障？Android中是如何实现消息同步屏障的？同步屏障的目的主要是为了什么？
+- Choreographer是什么？Choreographer发出异步消息后如何执行任务？
 
 
 ### 05.Android多线程问题
