--- a/Read/ReadMeWiki/09.问题思考/08.其他知识问题汇总.md
+++ b/Read/ReadMeWiki/09.问题思考/08.其他知识问题汇总.md
@@ -1,5 +1,7 @@
 # 非技术问题
 #### 目录介绍
+- 01.非技术问题
+- 02.场景类问题
 
 
 ## 01.非技术问题
@@ -15,7 +17,18 @@
 - 谈谈您以往职业生涯中令您有成就感的一、两件事，并说说它给您的启示
 
 
-
-
+### 02.场景类问题
+- 即“就业务场景给出解决方案”，考察运用知识解决问题的能力。这类题取决于临场应变、长期积累、运气。
+- 项目经历题取决于对工作内容的总结提炼、拔高升华、运气：
+    ```
+    争取到什么样的资源
+    安排了怎么样的分工
+    搭建了什么样的架构
+    运用了什么模式
+    做了什么样的取舍
+    采用了什么策略
+    做了什么样的优化
+    解决了什么问题
+    ```
 
 
