--- a/Read/ReadMeWiki/00.方案实践/20.高性能图片优化方案.md
+++ b/Read/ReadMeWiki/00.方案实践/20.高性能图片优化方案.md
@@ -45,7 +45,9 @@
     - 7.7 优化H5图片加载
     - 7.8 优化图片阴影效果
     - 7.9 图片资源的压缩
-
+- 08.图片一些其他操作
+    - 8.1 图片高斯模糊优化
+    - 8.2 图片设置圆角操作
 
 
 
@@ -600,6 +602,12 @@
     - 推荐一个图片压缩网站：[tinypng网站](https://tinypng.com/)
 
 
+
+### 08.图片一些其他操作
+#### 8.1 图片高斯模糊优化
+
+
+#### 8.2 图片设置圆角操作
 
 
 
