--- a/Read/ReadMeWiki/00.方案实践/28.App磁盘沙盒实践.md
+++ b/Read/ReadMeWiki/00.方案实践/28.App磁盘沙盒实践.md
@@ -10,6 +10,7 @@
     - 2.3 机身外部存储
     - 2.4 SD卡外部存储
     - 2.5 总结和梳理下
+    - 2.6 ADB导出日志
 - 03.方案基础设计
     - 3.1 整体架构图
     - 3.2 UML设计图
@@ -176,6 +177,14 @@
         - 外部存储/sdcard/Android/data/com.yc.helper/被清空
         - 这种情况，相当于删除用户sp，数据库文件，相当于重置了app
 
+
+#### 2.6 ADB导出日志
+- 首先adb进入到指定路径
+    - /storage/emulated/0/Android/data/com.yc.helper/files
+    - /storage/emulated/0/Android/data/com.yc.helper/cache
+    - /data/user/0/com.yc.helper
+- adb如何导出文件到电脑
+    - adb pull /storage/emulated/0/Android/data/com.yc.helper/files
 
 
 ### 04.一些技术要点说明
