--- a/Read/ReadMeWiki/01.大型方案/04.轻量级线程池实践.md
+++ b/Read/ReadMeWiki/01.大型方案/04.轻量级线程池实践.md
@@ -12,6 +12,7 @@
     - 2.4 线程池生命周期
     - 2.5 线程池弊端分析
     - 2.6 线程池方案对比
+    - 2.7 优雅创建线程池
 - 03.线程分析
     - 3.1 线程为何有优先级
     - 3.2 线程池如何管理线程
@@ -41,6 +42,7 @@
     - 6.5 异常设计
 - 07.其他说明介绍
     - 7.1 参考链接
+
 
 
 
@@ -131,6 +133,12 @@
 
 #### 2.8 线程池方案对比
 - 推荐ArchTaskExecutor；其次是RxJava；再其次是 AsyncTask
+
+
+#### 2.7 优雅创建线程池
+- 1、可以创建CPU密集型和io密集型的线程池。CPU密集型的线程池和核心数相关，核心线程数可以是2到4之间，最大线程数可以是2倍的核心数再加一。
+- 2、针对IO密集型的线程池，为例能够让越快执行，核心线程数可以为0，最大线程数可以是int的最大值。但是每个设备并不能创建这么多的线程，一旦线程数超限，仍然会发生崩溃。可以查看下设备的创建线程数的上限，/proc/sys/kernel/threads-max记录的设备能够创建线程的最大数，根据这个上限来设置最大的线程池。同时还可以创建一个备份的线程池，当线程用光后，启用备份的线程池，备份线程池可以只有一个或者多个线程。
+
 
 
 
