--- a/Read/ReadMeWiki/00.方案实践/26.线程优化实践操作.md
+++ b/Read/ReadMeWiki/00.方案实践/26.线程优化实践操作.md
@@ -1,14 +1,17 @@
 #### 目录介绍
 - 01.线程优化的背景
     - 1.1 实践背景说明
-    - 1.2 线程优化为何难
-    - 1.3 使用工具分析线程
-    - 1.4 线程上报工具
-- 02.线程使用的现状
+    - 1.2 遇到场景记录
+    - 1.3 查找线程的来源
+    - 1.4 查看项目的线程
+    - 1.5 查找线程来源
+- 02.线程现状和改造
     - 2.1 线程使用问题
     - 2.2 线程问题有哪些
     - 2.3 使用线程池管理线程
-    - 2.4 线程问题排查难
+    - 2.4 常规解决方案
+    - 2.5 线程改造方案
+    - 2.6 线程改造的计划
 - 03.线程的一些基础
     - 3.1 主线程与子线程
     - 3.2 UI线程的特点
@@ -24,6 +27,9 @@
 - 05.高效的使用线程
     - 5.1 多线程安全问题
     - 5.2 频繁发送消息问题
+    - 5.3 轻量级线程池
+    - 5.4 异步线程管理
+    - 5.5 线程绑定生命周期
 - 06.合理设置线程优先级
     - 6.1 设置线程优先级方式
 - 07.线程卡顿是怎么回事
@@ -33,19 +39,57 @@
 
 
 
-
 ### 01.线程优化的背景
 #### 1.1 实践背景说明
+- 1.编译器自带的profiler工具显示项目在启动阶段有上百个线程被创建，这么多的线程真的都是由App创建的吗？
+- 2.过多的线程不仅仅带来了内存上的消耗同时也降低了cpu调度的效率，过多的cpu调度带来的消耗的坏处甚至超过了多线程带来的好处。
+- 3.每个设备能够创建的线程数是有限的，创建的线程数超限就会发生崩溃。为解决线程数超限带来的崩溃问题就需要降低线程的个数，既然需要降低线程的个数，那需要查找线程的来源。
 
 
-#### 1.2 线程优化为何难
+
+#### 1.2 遇到场景记录
+- 通常会遇到以下几个问题
+    - 某个场景会创造过多的线程，最终导致线程OOM
+    - 线程池过多问题，比如三方库有一套线程池，自己项目也有一套线程池，随着三方/二方业务接入，导致了不相兼容的线程池数越多，降低了全体线程池数的调度效率，比如多个okhttp的调用
+    - 老代码原因导致，new Thread横行，又或者是各种线程使用不规范，导致工程混乱
+    - 即使是空闲时候，依旧有线程在不断Waiting
+    - 偶发各种线程死锁问题
+- 导致的结果
+    - 会遇到各种线程不明的情况，对排查问题或者解决问题带来极大的考验。
 
 
-#### 1.3 使用工具分析线程
+
+#### 1.3 查找线程的来源
+- 如何查找线程的来源？
+    - 新建一个空项目，创建完成后不添加任何代码直接运行项目，然后查看profiler中显示的线程，可以发现profiler中显示有10多个线程。
+    - 通过线程名，大致可以推测出线程的创建者分别有安卓系统、profile自身、Android Studio等，除此之外还有主线程。
+- 主要是哪些线程呢？
+    - 一个空项目，至少包含主线程main、Binder线程，FinalizerDaemon线程、FinalizerWatchdog线程、RenderThread、ReferenceQueued、HeapTaskDaemon、SignalCatcher、GCDaemon等等。
+
+
+#### 1.4 查看项目的线程
+- 首先查看进程
+    - 通过命令查看App存在的进程，主要是获取uid数据：adb shell ps | grep com.zuoyebang.iotunion
+- 然后通过进程uid获取线程
+    - 通过命令行初步查看uid对应进程的线程：adb shell ps -T | grep u0_a579
+- 分析进程中创建的线程
+    - 这些线程有系统的线程，系统的线程占了很大一部分。剩下就是业务自己创建的线程以及三方库创建的线程，接下来就是要查找出线程的来源。
+    - 创建线程就需要调用线程的构造方法，所以可以hook线程的构造方法，然后获取堆栈，这样就能知道线程的来源。
+
+
+#### 1.5 查找线程来源
+- epic是一个可以hook的框架
+    - 可以hook普通方法、构造方法、系统方法，但是存在兼容性问题，在一些设备上运行会崩溃，该框架已经很久没维护了。
+- aspectj是基于AspectJ
+    - 在此基础上扩展出来可应用于Android开发平台的AOP框架，可作用于java源码，class文件及jar包，同时支持kotlin的应用，但是在高版本的gradle上会出现编译问题。
+
 
 
 ### 02.线程使用的现状
 #### 2.1 线程使用问题
+- 线程数过多，本质上是直接创建线程，没有复用线程，每当来一个任务就创建一个线程，使得创建的线程越来越多。
+- 项目中使用了过多的线程池，没有统一线程池，最好一个项目中只有一个线程池。
+
 
 
 #### 2.2 线程问题有哪些
@@ -58,7 +102,30 @@
     - Android中的AsyncTask就使用了线程池。
 
 
-#### 2.4 线程问题排查难
+#### 2.4 常规解决方案
+- 第一种：团队增加cr机制，review代码准入
+    - 比如定制Thread的规范，又或者是定义项目统一的线程池，在项目中去使用。这个方案优点就是可操作性强，便于团队去实施。
+- 第二种：
+    - 通用的方案实践，比较流行的方案是通过字节码插桩的方式，统一做线程监控亦或进行线程统一，比如监控处理的matrix，还有优化相关的booster等。
+
+
+
+#### 2.5 线程改造方案
+- 方案1：使用统一的线程池，不要手动创建线程，将项目中使用线程的地方替换成线程池，最好一个项目中只有一个线程池。
+- 方案2：对于三方库创建的线程，如果三方库有替换线程的接口，则可以将三方库创建的线程替换成统一的线程池。如果三方库没有替换线程的接口，可以把三方库的源码下载下来，直接修改源码，然后将修改后的源码上传到公司的仓库。
+- 方案3：可以使用字节码插桩的方式将项目中的线程替换成统一的线程池，这个一下子搞不定，而且成本会比较高，需要经过严格的线下测试。
+
+
+#### 2.6 线程改造的计划
+- 前期计划         
+    - 1、创建全局统一的线程池，将项目中使用线程的地方替换成线程池，如果三方库有替换线程的接口，则将三方库创建的线程替换成统一的线程池。
+    - 2、最好进行灰度测试，通过服务端设置一个开关，开关默认开启，开关开了，则启用统一的线程池，否则使用老代码。
+    - 3、由于三方库的线程并没有修改掉，项目中引入线程池，可能会导致线程数不降反升。
+- 长期计划
+    - 1、使用字节码插桩的方式将项目中的线程替换成统一的线程池，这个影响范围也比较大，需要经过严格的测试，滴滴开源的booster已经提供了这种功能。
+- 长效机制
+    - 1、为了防止后续在项目里面手动创建线程，可以在编译期间检测线程，如果手动创建线程，直接编译失败，缺点就是会导致编译时间变长。
+
 
 
 ### 03.线程的一些基础
@@ -72,12 +139,9 @@
 
 
 
-
-
 #### 3.2 UI线程的特点
 - Android UI线程（主线程）有几个特点：
-    - 只能在 UI 线程操作 UI 视图，不能在子线程中操作。
-    - 不能在 UI 线程中进行耗时操作，否则会阻塞 UI 线程，引起 ANR、卡顿等问题。
+    - 只能在 UI 线程操作 UI 视图，不能在子线程中操作。不能在 UI 线程中进行耗时操作，否则会阻塞 UI 线程，引起 ANR、卡顿等问题。
 - 在 Android 开发中，我们通常将一些耗时的操作使用异步任务的方式进行处理。
     - 例如这样一种这种场景，子线程在后台执行一个异步任务，任务过程中，需要 UI 进程展示进度，这时我们就需要一个工具来实现这种需求。
     - Android 系统为开发人员提供了一个异步任务类（AsyncTask）来实现上面所说的功能，即它会在一个子线程中执行计算任务，同时通过主线程的消息循环来获得更新应用程序界面的机会。
@@ -255,6 +319,27 @@
 
 
 ### 07.线程卡顿是怎么回事
+#### 7.1 线程如何卡顿
+
+
+#### 7.2 如何模拟线程卡顿
+
+
+#### 7.3 如何解决线程卡顿
+
+
+
+### 参考博客
+- 线程监控 - 死锁、存活周期与 CPU 占用率
+    - https://www.jianshu.com/p/a4efccd09e02
+- Android性能优化-线程监控与线程统一
+    - https://juejin.cn/post/7143944351016550437
+
+
+
+
+
+
 
 
 
