--- a/Read/ReadMeWiki/00.方案实践/05.ANR监控治理实践.md
+++ b/Read/ReadMeWiki/00.方案实践/05.ANR监控治理实践.md
@@ -12,16 +12,24 @@
     - 2.4 ANR触发场景
     - 2.5 四大组件ANR
     - 2.6 触发ANR的步骤
-- 04.ANR排查解决实践
-- 05.ANR监控设计思路
+- 03.ANR流程分析
+    - 3.1 触发ANR的步骤
+    - 3.2 Activity的ANR分析
+    - 3.3 Service的ANR分析
+    - 3.4 ANR后系统执行流程
+    - 3.5 那些极端情况不会ANR
+    - 3.6 ANR静默和弹窗
+    - 3.7 处理ANR信息收集
+- 04.ANR是怎么设计
+    - 4.1 什么是输入系统
+    - 4.2 系统进程输入系统
+    - 4.3 组件类型ANR
+    - 4.4 Input类型ANR
+    - 4.5 事件分发异步机制
+- 05.ANR监控排查思路
     - 5.1 ANR监控整体思路
     - 5.2 目前流行方案
     - 5.3 ANR捕获设计
-    - 5.5 整体架构图
-    - 5.6 UML设计图
-    - 5.7 关键流程图
-    - 5.8 接口设计图
-    - 5.9 模块间依赖关系
 - 06.其他设计说明
     - 6.1 性能设计
     - 6.2 稳定性设计
@@ -280,7 +288,7 @@
     - 这些情况包括：进程正在处于正在关闭的状态，正在crash的状态，被kill的状态，或者相同进程已经处在ANR的流程中。
 
 
-#### 3.6 理解ANR静默和弹窗
+#### 3.6 ANR静默和弹窗
 - 看下面的源码分析，还是appNotResponding方法。
     - 大概的意思是，通过isSilentAnr()判断是否是静默ANR，如果是那么则直接kill杀死app。其实就是后台ANR。
     - 如果是前台，则是通过handler发送一个消息，创建anr弹窗对象，赋值给message的obj对象。
@@ -326,7 +334,7 @@
     ```
 
 
-#### 3.7 处理ANR信息收集操作
+#### 3.7 处理ANR信息收集
 - 为了方便定位，因此需要收集ANR信息。下面代码还是appNotResponding方法，主要是收集信息的重要代码。
     - dump很多信息到ANR Trace文件里，下面的逻辑就是选择需要dump的进程。
     - ANR Trace文件是包含许多进程的Trace信息的，因为产生ANR的原因有可能是其他的进程抢占了太多资源
@@ -400,6 +408,110 @@
             nativePids);
     ```
 
+
+
+### 04.ANR是怎么设计
+#### 4.1 什么是输入系统
+- `ANR`机制到底是什么，其背后的原理究竟如何，为什么要设计出这样的机制？这些问题时时刻刻会萦绕脑海，而想搞清楚这些，就不得不提到`Android`自身的 **输入系统** （`Input System`）。
+`Android`自身的 **输入系统** 是什么？任何与`Android`设备的交互——称之为 **输入事件**，都需要通过 **输入系统** 进行管理和分发；这其中最靠近上层，并且最典型的一个小环节就是`View`的 **事件分发** 流程。
+
+
+#### 4.2 系统进程输入系统
+- `Android`系统在启动的时候,会初始化`zygote`进程和由`zygote`进程`fork`出来的`SystemServer`进程；作为 **系统进程** 之一，`SystemServer`进程会提供一系列的系统服务，而`InputManagerService`也正是由 `SystemServer` 提供的。
+- 在`SystemServer`的初始化过程中，`InputManagerService`(下称`IMS`)和`WindowManagerService`(下称`WMS`)被创建出来；其中`WMS`本身的创建依赖`IMS`对象的注入：
+    ``` java
+    // SystemServer.java
+    private void startOtherServices() {
+     InputManagerService inputManager = new InputManagerService(context);
+     // inputManager作为WindowManagerService的构造参数
+     WindowManagerService wm = WindowManagerService.main(context,inputManager, ...);
+    }
+    ```
+- 在 **输入系统** 中，`WMS`非常重要，其负责管理`IMS`、`Window`与`ActivityManager`之间的通信，先来看`IMS`。
+- `IMS`服务的作用就是负责输入模块在`Java`层级的初始化，并通过`JNI`调用，在`Native`层进行更下层输入子系统相关功能的创建和预处理。
+- 在`JNI`的调用过程中，`IMS`创建了`NativeInputManager`实例，`NativeInputManager`则在初始化流程中又创建了`EventHub`和`InputManager`:
+    ``` cpp
+    NativeInputManager::NativeInputManager(jobject contextObj, jobject serviceObj, const sp<Looper>& looper) : mLooper(looper), mInteractive(true) {
+        // ...
+        // 创建一个EventHub对象
+    sp<EventHub> eventHub = new EventHub();
+    // 创建一个InputManager对象
+    mInputManager = new InputManager(eventHub, this, this);
+    }
+    ```
+- 对于整个`Native`层级而言，其向下负责与`Linux`的设备节点中获取输入，向上则与靠近用户的`Java`层级相通信，可以说是非常重要。而在该层级中，`EventHub`和`InputManager`又是最核心的两个角色。
+- 首先来说`EventHub`，它是底层 **输入子系统** 中的核心类，负责从物理输入设备中不断读取事件（`Event`)，然后交给`InputManager`，后者内部封装了`InputReader`和`InputDispatcher`，用来从`EventHub`中读取事件和分发事件
+    ``` cpp
+    InputManager::InputManager(...) {
+        mDispatcher = new InputDispatcher(dispatcherPolicy);
+        mReader = new InputReader(eventHub, readerPolicy, mDispatcher);
+        initialize();
+    }
+    ```
+- `EventHub`建立了`Linux`与输入设备之间的通信，`InputManager`中的`InputReader`和`InputDispatcher`负责了输入事件的读取和分发，在 **输入系统** 中，两者的确非常重要。
+
+
+#### 4.3 组件类型ANR
+- `ANR`是一套监控`Android`应用响应是否及时的机制，可以把发生`ANR`比作是 **引爆炸弹**，那么整个流程包含三部分组成：
+- **埋定时炸弹**：中控系统(`system_server`进程)启动倒计时，在规定时间内如果目标(应用进程)没有干完所有的活，则中控系统会定向炸毁(杀进程)目标。
+- **拆炸弹**：在规定的时间内干完工地的所有活，并及时向中控系统报告完成，请求解除定时炸弹，则幸免于难。
+- **引爆炸弹**：中控系统立即封装现场，抓取快照，搜集目标执行慢的罪证(`traces`)，便于后续的案件侦破(调试分析)，最后是炸毁目标。
+
+
+#### 4.4 Input类型ANR
+- `Input`类型的`ANR`在日常开发中更为常见且更复杂，比如用户或者测试反馈，点击屏幕中的UI元素导致「卡死」。
+- 少数情况下开发者能够很快定位到问题，但更常见的情况是，该问题是 **随机** 且 **难以复现** 的，导致该问题的原因也更具有综合性，比如低端设备的系统本身资源已非常紧张，或者多线程相互持有彼此需要的资源导致 **死锁** ，亦或其它复杂的情况，因此处理这类型问题就需要开发者对 **输入系统** 中的`ANR`机制有一定的了解。
+- 和组件类`ANR`不同的是，`Input`类型的超时机制并非时间到了一定就会爆炸，而是处理后续上报事件的过程才会去检测是否该爆炸，所以更像是 **扫雷** 的过程。
+- **扫雷**，对于 **输入系统** 而言，即使某次事件执行时间超过预期的时长，只要用户后续没有再生成输入事件，那么也不需要`ANR`。
+- 而只有当新一轮的输入事件到来，此时正在分发事件的窗口（即`App`应用本身）迟迟无法释放资源给新的事件去分发，这时`InputDispatcher`才会根据超时时间，动态的判断是否需要向对应的窗口提示`ANR`信息。
+- 这也正是用户在第一次点击屏幕，即使事件处理超时，也没有弹出`ANR`窗口，而当用户下意识再次点击屏幕时，屏幕上才提示出了`ANR`信息的原因。
+- 由此可见，组件类`ANR`和`Input ANR`原理上确实有所不同；除此之外，前者是在`ActivityManager`线程中处理的`ANR`信息，后者则是在`InputDispatcher`线程中处理的`ANR`
+
+
+#### 4.5 事件分发异步机制
+- 先抛出一个新的问题，对处于`system_server`进程`Native`层级的 **事件分发** 而言，其向下与 **应用进程** 的通信的过程应该是同步还是异步的？
+
+对于读者而言，不难得出答案是异步的，因为两者之间双向通信的建立是通过`SocketPair`，并且，因为`system_server`中`InputDispatcher`对事件的分发实际上是一对多的，如果是同步的，那么一旦其中一个应用分发超时，那么`InputDispatcher`线程自然被卡住，其永远都不可能进入到下一轮的事件分发中，**扫雷** 机制更是无从谈起。
+
+因此，与应用进程中事件分发不同的是，后者我们通常可以认为是在主线程中同步的，而对于整个 **输入系统** 而言，因为涉及到 **系统进程** 与多个 **应用进程** 之间异步的通信，因此其内部的实现更为复杂。
+
+因为事件分发涉及到异步回调机制，因此`InputDispatcher`需要对事件进行维护和管理，那么问题就变成了，使用什么样的数据结构去维护这些输入事件比较合适。
+
+### 4、三个队列
+
+`InputDispatcher`的源码实现中，整体的事件分发流程共使用到3个事件队列：
+
+* mInBoundQueue：用于记录`InputReader`发送过来的输入事件；
+* outBoundQueue：用于记录即将分发给目标应用窗口的输入事件；
+* waitQueue：用于记录已分发给目标应用，且应用尚未处理完成的输入事件。
+
+下文，笔者通过2轮事件分发的示例，对三个队列的作用进行简单的梳理。
+
+#### 4.1 第一轮事件分发
+
+首先`InputReader`线程通过`EventHub`监听到底层的输入事件上报，并将其放入了`mInBoundQueue`中，同时唤醒了`InputDispatcher`线程。
+
+然后`InputDispatcher`开始了第一轮的事件分发，此时并没有正在处理的事件，因此`InputDispatcher`从`mInBoundQueue`队列头部取出事件，并重置`ANR`的计时，并检查窗口是否就绪，此时窗口准备就绪，将该事件转移到了`outBoundQueue`队列中，因为应用管道对端连接正常，因此事件从`outBoundQueue`取出，然后放入了`waitQueue`队列，因为`Socket`双向通信已经建立，接下来就是 **应用进程** 接收到新的事件，然后对其进行分发。
+
+如果 **应用进程** 事件分发正常，那么会通过`Socket`向`system_server`通知完成，则对应的事件最终会从`waitQueue`队列中移除。
+
+#### 4.2 第二轮事件分发
+
+如果第一轮事件分发尚未接收到回调通知，第二轮事件分发抵达又是如何处理的呢？
+
+第二轮事件到达`InputDispatcher`时，此时`InputDispatcher`发现有事件正在处理，因此不会从`mInBoundQueue`取出新的事件，而是直接检查窗口是否就绪，若未就绪，则进入`ANR`检测状态。
+
+以下几种情况会导致进入`ANR`检测状态：
+
+> 1、目标应用不会空，而目标窗口为空。说明应用程序在启动过程中出现了问题；
+> 2、目标`Activity`的状态是`Pause`，即不再是`Focused`的应用；
+> 3、目标窗口还在处理上一个事件。
+
+读者需要理解，并非所有「目标窗口还在处理上一个事件」都会抛出`ANR`，而是需要通过检测时间，如果未超时，那么直接中止本轮事件分发，反之，如果事件分发超时，那么才会确定`ANR`的发生。
+
+这也正是将`Input`类型的`ANR`描述为 **扫雷** 的原因：这里的扫雷是指当前输入系统中正在处理着某个耗时事件的前提下，后续的每一次`input`事件都会检测前一个正在处理的事件是否超时（进入扫雷状态），检测当前的时间距离上次输入事件分发时间点是否超时。如果前一个输入事件，则会重置`ANR`的`timeout`，从而不会爆炸。
+
+至此，**输入系统** 检测到了`ANR`的发生，并向上层抛出了本次`ANR`的相关信息。
 
 
 ### 05.参考资料
