--- a/Read/ReadMeWiki/00.方案实践/26.线程优化实践操作.md
+++ b/Read/ReadMeWiki/00.方案实践/26.线程优化实践操作.md
@@ -30,6 +30,7 @@
     - 5.3 轻量级线程池
     - 5.4 异步线程管理
     - 5.5 线程绑定生命周期
+    - 5.6 排查线程CPU使用率飙升
 - 06.合理设置线程优先级
     - 6.1 设置线程优先级方式
 - 07.线程卡顿是怎么回事
@@ -287,6 +288,47 @@
     handlerThread.start();
     Handler handler = new Handler(handlerThread.getLooper());
     ```
+
+
+
+#### 5.6 排查线程CPU使用率飙升
+- 首先模拟一个CPU高使用率场景
+    ``` java
+    public class HighCpuTest {
+        public static void main(String[] args) {
+            List<HignCpu> cpus = new ArrayList<>();
+            Thread highCpuThread = new Thread(()->{
+                int i = 0;
+                while (true){
+                    HignCpu cpu = new HignCpu("Java日知录",i);
+    
+                    cpus.add(cpu);
+                    System.out.println("high cpu size:" + cpus.size());
+                    i ++;
+                }
+            });
+            highCpuThread.setName("HignCpu");
+            highCpuThread.start();
+        }
+    }
+    ```
+- 在main方法中开启了一个线程，无限构建HighCpu对象。
+    ``` java
+    @Data
+    @AllArgsConstructor
+    public class HignCpu {
+        private String name;
+        private int age;
+    }
+    ```
+- 排查步骤
+    - 第一步，使用 top 找到占用 CPU 最高的 Java 进程。这一步监控cpu运行状，显示进程运行信息列表。
+    - 第二步，用 top -Hp 命令查看占用 CPU 最高的线程。
+        - 那一个进程中有那么多线程，不可能所有线程都一直占着 CPU 不放，这一步要做的就是揪出这个罪魁祸首，当然有可能不止一个。执行top -Hp pid命令，pid 就是前面的 Java 进程。然后再查查到占用CPU最高的那个线程PID。
+    - 第三步，查看堆栈信息，定位对应代码。
+        - 通过printf命令将其转化成16进制，之所以需要转化为16进制，是因为堆栈里，线程id是用16进制表示的。得到线程id后然后通过jstack命令查看堆栈信息。
+        - 找到了耗CPU高的线程对应的线程名称“HighCpu”，以及看到了该线程正在执行代码的堆栈。最后，根据堆栈里的信息，定位到对应死循环代码，搞定。
+
 
 
 
