--- a/Read/ReadMeWiki/09.问题思考/01.Java相关问题汇总.md
+++ b/Read/ReadMeWiki/09.问题思考/01.Java相关问题汇总.md
@@ -23,25 +23,25 @@
 - int,long的取值范围以及BigDecimal，数值越界了如何处理？
 - 介绍一下拆箱和装箱的问题。Java中拆箱和装箱是在基本数据类型和其对应的对象类之间转换时出现的，为什么要这样操作？Integer 对象缓存机制是什么？
 - int 和 Integer 哪个会占用更多的内存？ int 和 Integer 有什么区别？parseInt()函数在什么时候使用到？
-- char 型变量中能不能存贮一个中文汉字，为什么？
+- char 型变量中能不能存贮一个中文汉字，为什么？char是两个字节，是怎么存Utf-8的字符的？
 - 将 int 强制转换为 byte 类型的变量吗？如果该值大于 byte 类型的范围，将会出现什么现象？
 - 什么是泛型，泛型主要有哪些应用场景？如何获取泛型的真实参数类型？具体是怎么操作的？
 - 泛型通配符，上界或者下届包含自己吗？如何理解泛型擦除这个概念？泛型擦除会有哪些影响？
 - 那些地方用到了泛型，为什么要用泛型？怎么获得泛型的具体的类？什么是泛型擦除呢？
-- 如何编写一个泛型方法，让它能接受泛型参数并返回泛型类型？你可以把List<String>传递给一个接受List<Object>参数的方法吗？Java中List<?>和List<Object>之间的区别是什么?
+- 如何编写一个泛型方法，让它能接受泛型参数并返回泛型类型？你可以把List<String>传递给一个接受List<Object>参数的方法吗？Java中List<？>和List<Object>之间的区别是什么？
 
 
 
 ### 02.面向对象问题
 - Java实现多态有哪些必要条件？具体怎么实现？多态的实现原理？多态的作用？
-- 重载（overloading）与重写（override）的区别? 重载的方法能否根据返回类型进行区分？继承最大好处?构造器 Constructor 是否可被 Override?
-- Java 中，什么是构造函数?什么是构造函数重载?什么是复制构造函数?
+- 重载（overloading）与重写（override）的区别？重载的方法能否根据返回类型进行区分？继承最大好处？构造器 Constructor 是否可被 Override？
+- Java 中，什么是构造函数？什么是构造函数重载？什么是复制构造函数？
 - 继承（Inheritance）与聚合（Aggregation）的区别在哪里？为什么类只能单继承，接口可以多继承？
 - 如果类 a 继承类 b，实现接口c，而类 b 和接口 c 中定义了同名变量，请问会出现什么问题？
 - 如何实现对象克隆？深拷贝和浅拷贝区别？深拷贝和浅拷贝如何实现激活机制？
-- 接口和抽象类有什么区别？为什么要这样设计？
+- 接口和抽象类有什么区别？为什么要这样设计？什么场景选择接口，什么场景选择抽象类？
 - 如何声名一个静态块？静态块有什么好处？静态块和构造方法哪一个先执行？
-- 接口是否可继承(extends)接口? 抽象类是否可实现(implements)接 口? 抽象类是否可继承具体类(concrete class)?
+- 接口是否可继承(extends)接口？ 抽象类是否可实现(implements)接 口？ 抽象类是否可继承具体类(concrete class)？
 - 抽象类中是否可以有静态的main方法？抽象类是否可实现(implements)接口？抽象类是否可继承具体类(concrete class)？
 - 内部类分为几种？内部类可以引用它的包含类（外部类）的成员吗？ Java 中为什么要引入内部类，还有匿名内部类？匿名内部类是否可以继承其它类，是否可以实现接口？
 - 接口是什么？接口是否可继承接口？为什么要使用接口而不是直接使用具体类？接口有什么优点？
@@ -52,10 +52,9 @@
 
 
 
-
 ### 03.IO流知识问题
 - 什么是比特(Bit)，什么是字节(Byte)，什么是字符(Char)，它们长度是多少，各有什么区别？
-- File类型中定义了什么方法来创建一级目录？File类型中定义了什么方法来判断一个文件是否存在？
+- File类型中定义了什么方法来创建一级目录？File类型中定义了什么方法来判断一个文件是否存在？如何判断目录的存在？
 - 对文本文件操作用什么I/O流？对各种基本数据类型和String类型的读写，采用什么流？为了提高读写性能，可以采用什么流？
 - 直接缓冲区与非直接缓冲器有什么区别？怎么读写 ByteBuffer？ByteBuffer 中的字节序是什么
 - 当用System.in.read(buffer)从键盘输入一行n个字符后，存储在缓冲区buffer中的字节数是多少？
@@ -71,7 +70,7 @@
 - Array 和 ArrayList 有什么区别？什么时候该应 Array 而不是 ArrayList 呢？
 - LinkedList 是单向链表还是双向链表？链表有什么样的特点？插入数据时，ArrayList, LinkedList, Vector谁速度较快？为什么？
 - HashSet是如何保证数据不可重复的？HashSet和TreeSet有什么区别？TreeMap和TreeSet在排序时如何比较元素？Collections工具类中的sort()方法如何比较元素？
-- Set 里的元素是不能重复的，那么用什么方法来区分重复与否呢？是用 == 还是 equals()？ 它们有何区别?
+- Set 里的元素是不能重复的，那么用什么方法来区分重复与否呢？是用 == 还是 equals()？ 它们有何区别？
 - 一个已经构建好的 TreeSet，怎么完成倒排序？集合Set实现Hash怎么防止碰撞？
 - ConcurrentHashMap和Hashtable的区别？ConcurrentHashMap的具体实现知道吗？ConcurrentHashMap是如何实现分段锁？
 - HashMap的扩容操作是怎么实现的？是怎么解决哈希冲突的？HashMap为什么不直接使用hashCode()处理后的哈希值直接作为table的下标？
@@ -107,7 +106,7 @@
 
 
 ### 07.并发知识问题
-- 说一说多线程原理，如果线程过多,会怎样?多线程的优点？同时多线程的缺点？
+- 说一说多线程原理，如果线程过多,会怎样？多线程的优点？同时多线程的缺点？
 - 多线程具有什么优点和缺点？为什么说开启大量的线程,会降低程序的性能，那么该如何做才能降低性能？
 - 现在有T1、T2、T3三个线程，你怎样保证T2在T1执行完后执行，T3在T2执行完后执行？
 - 在Java中Lock接口比synchronized块的优势是什么？你需要实现一个高效的缓存，它允许多个用户读，但只允许一个用户写，以此来保持它的完整性，你会怎样去实现它？
