--- a/Read/ReadMeWiki/09.问题思考/03.Android问题汇总.md
+++ b/Read/ReadMeWiki/09.问题思考/03.Android问题汇总.md
@@ -1,6 +1,6 @@
 # Android问题汇总
 #### 目录介绍
-- 01.Android四大组件问题
+- 01.四大组件问题汇总
 - 02.View工作原理问题
 - 03.Android事件体系问题
 - 04.Android消息机制
@@ -11,10 +11,11 @@
 - 10.Android数据相关问题
 - 11.WebView相关问题
 - 12.Jetpack相关问题
-- 13.控件相关问题汇总
+- 13.Framwork相关问题
+- 14.控件相关问题汇总
 
 
-### 01.Android四大组件问题
+### 01.四大组件问题汇总
 #### 1.1 Activity
 - 说下Activity的生命周期？onStart()和onResume()/onPause()和onStop()的区别？并且这几个方法在那种场景下用到，具体有什么作用？
 - Activity异常生命周期，以及简单说一下这些方法是做什么用的？onSaveInstanceState()方法？何时会调用？onSaveInstanceState()与onPause()的区别？如何避免配置改变时Activity重建？
@@ -99,13 +100,13 @@
 - 子线程中是否可以new一个handler对象？会出现什么问题，为什么？
 - Looper从消息队列中取出消息后，如何传递给handler？消息队列MessageQuee底层怎么实现的？
 - Handler、Thread和HandlerThread的差别 ？HandlerThread是怎么实现的？
-- ThreadLocal原理，实现及如何保证Local属性？
 - Looper.loop()为什么不会阻塞主线程，IdleHandler（闲时机制）是做什么用的？
 - Handler机制，IdleHandler执行时机。Handler#postDelay(runnable, 20s) 一个消息，然后把手机时间调整为1分钟后，刚才的runnable会不会执行。
 
 
 #### 4.2 ThreadLocal
 - ThreadLocal是如何做到线程间的不共享数据的，ThreadLocalMap里面的key和value是什么。
+- ThreadLocal原理，实现及如何保证Local属性？
 
 
 #### 4.3 同步消息屏障
@@ -180,7 +181,18 @@
 
 
 
-### 13.控件相关问题汇总
+### 13.Framwork相关问题
+- 描述一下冷启动的过程。冷启动就是在 Launcher 进程中开启另一个引用 Activity 的过程。
+
+
+
+### 14.控件相关问题汇总
+
+
+#### 14.4 SurfaceView
+
+
+#### 14.4 TextureView
 
 
 
