--- a/Read/ReadVideoWiki/01.原理知识/11.SurfaceView深入学习.md
+++ b/Read/ReadVideoWiki/01.原理知识/11.SurfaceView深入学习.md
@@ -832,6 +832,12 @@
 
 
 
+#### 5.3 Surfaceview总结
+- 一个嵌入View树的独立绘制表面，他位于宿主Window的下方，通过在宿主canvas上绘制透明区域来显示自己
+- 虽然它在界面上隶属于view hierarchy，但在WMS及SurfaceFlinger中都是和宿主窗口分离的，它拥有独立的绘制表面，绘制表面在app进程中表现为Surface对象，在系统进程中表现为在WMS中拥有独立的WindowState，在SurfaceFlinger中拥有独立的Layer，而普通view和其窗口拥有同一个绘制表面
+- 因为它拥有独立与宿主窗口的绘制表面，所以它独立于主线程的刷新机制。
+- 它的背景是属于宿主窗口的绘制表面，所以如果背景不透明则会盖住它的绘制内容
+
 
 #### 参考博客
 - 为啥从SurfaceView中获取不到图片？
