--- a/Read/ReadVideoWiki/01.原理知识/12.TextureView深入学习.md
+++ b/Read/ReadVideoWiki/01.原理知识/12.TextureView深入学习.md
@@ -38,8 +38,12 @@
 - SurfaceView的说明
     - SurfaceView的工作方式是创建一个置于应用窗口之后的新窗口。这种方式的效率非常高，因为SurfaceView窗口刷新的时候不需要重绘应用程序的窗口（android普通窗口的视图绘制机制是一层一层的，任何一个子元素或者是局部的刷新都会导致整个视图结构全部重绘一次，因此效率非常低下，不过满足普通应用界面的需求还是绰绰有余），但是SurfaceView也有一些非常不便的限制。
     - 因为SurfaceView的内容不在应用窗口上，所以不能使用变换（平移、缩放、旋转等）。也难以放在ListView或者ScrollView中，不能使用UI控件的一些特性比如View.setAlpha()。
-
-
+- 两者的对比
+    - SurfaceView 拥有独立的绘制表面，而TextureView和View树共享绘制表面
+    - TextureView通过观察BufferQueue中新的SurfaceTexture到来，然后调用invalidate触发View树重绘，如果有View叠加在TextureView上面，它们的脏区有交集，则会触发不必要的重绘，所以他的刷新操作比SurfaceView更重
+    - TextureView 持有 SurfaceTexture，它是一个GPU纹理
+    - SurfaceView 有双缓冲机制，绘制更加流畅
+    - TextureView 在5.0之前在主线程绘制，5.0之后在RenderThread绘制。
 
 
 ### 05.如何合理选择
