--- a/Read/ReadMeWiki/00.方案实践/06.卡顿监控设计实践.md
+++ b/Read/ReadMeWiki/00.方案实践/06.卡顿监控设计实践.md
@@ -5,9 +5,10 @@
     - 1.3 基础概念
     - 1.4 设计目标
 - 02.卡顿技术要点说明
-    - 2.1 UI卡顿产生的原因
+    - 2.1 UI卡顿产生原因
     - 2.2 卡顿和ANR的关系
     - 2.3 什么是FPS流畅度
+    - 2.4 一帧显示的步骤
 - 03.监控卡顿流程
     - 3.1 Handler机制说一下
     - 3.3 UI卡顿检测实现
@@ -108,6 +109,11 @@
     - 但是低于30fps是无法顺畅表现绚丽的画面内容的，此时就需要用到60fps来达到想要的效果，当然超过60fps是没有必要的。
 - 如何查看FPS流畅度
     - 待完善，todo
+
+
+#### 2.4 一帧显示的步骤
+- 一帧的显示要经历如下步骤：cpu计算画多大，画在哪里，画什么，然后gpu渲染计算结果存到buffer，显示器每隔一段时间从buffer取帧。若没有取到帧，只能继续显示上一帧。
+
 
 
 ### 03.监控卡顿流程
