feat：完善问题汇总

--- a/Read/ReadMeWiki/09.问题思考/01.Java相关问题汇总.md
+++ b/Read/ReadMeWiki/09.问题思考/01.Java相关问题汇总.md
@@ -102,6 +102,7 @@
 - 为什么我们调用start()方法时会执行run()方法，为什么我们不能直接调用run()方法？
 - Java 中如何停止一个线程？stop() 和 suspend() 方法为何不推荐使用？如何让正在运行的线程暂停一段时间？
 - 调用start()方法时会执行run()方法，为什么不能直接调用run()方法？你是如何调用 wait（方法的）？使用 if 块还是循环？为什么
+- 说说生产者-消费者问题，如何保证生产者不会在缓冲区满时加入数据，消费者也不会在缓冲区空时消耗数据？
 
 
 
@@ -115,7 +116,6 @@
 - 谈谈对Synchronized关键字，类锁，方法锁，重入锁的理解？对象锁和类锁是否会互相影响？
 - 两个进程同时要求写或者读，能不能实现？如何防止进程的同步？
 - 设计一个多线程，可以同时读，读的时候不能写，写的时候不能读(读写锁)
-- 如何防止反射、序列化攻击单例？
 - 当一个线程进入一个对象的 synchronized 方法A 之后，其它线程是否可进入此对象的 synchronized 方法B？使用 synchronized 修饰静态方法和非静态方法有什么区别？
 - 在线程中你怎么处理不可捕捉异常？实际项目中使用多线程举例。你在多线程环境中遇到的常见的问题是什么？你是怎么解决它的
 - 假如有一个第三方接口，有很多个线程去调用获取数据，现在规定每秒钟最多有 10 个线程同时调用它，如何做到？
@@ -166,6 +166,9 @@
 
 
 ### 10.枚举注解问题
+- 注解如何获取，反射为何耗性能？了解动态注解吗，说一下Retrfit网络加载框架是如何进行动态注解的？
+- 注解有哪些？写过注解吗？比如分析下butterKnife在bind()时的原理……注解如何实现一个findViewById
+
 
 
 ### 12.其他知识问题
