--- a/Read/ReadMeWiki/09.问题思考/04.Android性能优化.md
+++ b/Read/ReadMeWiki/09.问题思考/04.Android性能优化.md
@@ -1,18 +1,31 @@
 # Android问题汇总
 #### 目录介绍
 - 01.内存相关问题汇总
+- 02.崩溃相关问题汇总
+- 03.网络相关问题汇总
 - 04.ANR相关问题汇总
 - 05.卡顿相关问题汇总
+- 09.主流库问题大汇总
 - 10.so库崩溃问题汇总
 
 
 
 ### 01.内存相关问题汇总
 - 内存泄漏常见的有哪几种？如何检测？LeakCanary原理，Activity、Fragment
+- 说一下四中引用的区别和使用场景，什么情况下会导致应用内存空间不足？弱引用和软引用有什么区别？
+
+
+### 02.崩溃相关问题汇总
+
+
+### 03.网络相关问题汇总
+- 服务器只提供数据接收接口，在多线程或多进程条件下，如何保证数据的有序到达？
+
 
 
 ### 04.ANR相关问题汇总
 - ANR如何解决，trace.txt如何看？
+- 对于Android APP闪退，可能的原因有哪些？请针对每种情况简述分析过程。ANR在bugly等第三方崩溃检测平台上有日志信息吗？是在哪里？
 
 
 
@@ -20,6 +33,12 @@
 - 卡顿如何解决？
 - UI卡顿的原因有哪些？如何优化？
 
+
+
+### 09.主流库问题大汇总
+- Retrofit采用动态代理，那么什么是动态代理，有何特点？
+- 使用过什么图片加载库，Glide 的源码设计哪里很微妙？说一下三级缓存的原理？描述一下内存缓存的容器？
+- 官方为什么会把 HttpClient 和 HttpUrlConnection 替换为 OkHttp 默认实现？它有什么好处？
 
 ### 10.so库崩溃问题汇总
 - so奔溃如何解决？
