--- a/Read/ReadMeWiki/09.问题思考/07.设计模式问题汇总.md
+++ b/Read/ReadMeWiki/09.问题思考/07.设计模式问题汇总.md
@@ -15,13 +15,15 @@
 - 开闭原则：关于扩展的原则。对扩展开放对修改关闭，做合理的抽象就能达到增加新功能的时候不修改老代码（能用父类的地方都用父类，在运行时才确定用什么样的子类来替换父类），开闭原则是目标，里氏代换原则是基础，依赖倒转原则是手段。
 - 里氏替换原则：为了避免继承的副作用，若继承是为了复用，则子类不该改变父类行为，这样子类就可以无副作用地替换父类实例，若继承是为了多态，则因为将父类的实现抽象化
 - 依赖倒置原则：即是面向接口编程，面向抽象编程，高层模块不该依赖底层模块，而是依赖抽象
+- 说说你对设计模式的理解，开发过程中主要用到了哪些设计模式？【这个问题回答一定要是自己熟悉的，面试官一般是追问】
 
 
 ### 06.单例模式问题
 - 目的：在单进程内保证类唯一实例。
 - 静态内部类：虚拟机保证一个类的初始化操作是线程安全的，而且只有使用到的时候才会去初始化，缺点是没办法传递参数。
 - 双重校验：第一校验处于性能考虑，若对象存在直接返回，不需要加锁。第二次校验是为了防止重复构建对象。对象引用必须声明为 volatile，通过保证可见性和防止重排序，保证单例线程安全。因为INSTANCE = new instance()不是原子操作，由三个步骤实现1.分配内存2.初始化对象3.将INSTANCE指向新内存，当重排序为1,3,2时，可能让另一个线程在第一个判空处返回未经实例化的单例。
-
+- 手写单例(DCL)模式代码？为什么要这样设计？如何防止反射、序列化攻击单例？
+- 手写常见的单例模式代码？synchronized修饰方法和修饰类有什么区别？写完后，请简述它们使用场景和利弊……
 
 
 ### 07.工厂模式问题
