--- a/Read/ReadMeWiki/09.问题思考/03.Android问题汇总.md
+++ b/Read/ReadMeWiki/09.问题思考/03.Android问题汇总.md
@@ -13,6 +13,7 @@
 - 12.Jetpack相关问题
 - 13.Framwork相关问题
 - 14.控件相关问题汇总
+- 15.Android进程IPC
 
 
 ### 01.四大组件问题汇总
@@ -20,8 +21,7 @@
 - 说下Activity的生命周期？onStart()和onResume()/onPause()和onStop()的区别？并且这几个方法在那种场景下用到，具体有什么作用？
 - Activity异常生命周期，以及简单说一下这些方法是做什么用的？onSaveInstanceState()方法？何时会调用？onSaveInstanceState()与onPause()的区别？如何避免配置改变时Activity重建？
 - Activity启动模式有哪些？具体说一下使用场景，并绘制进出栈的图形？从非activity中开启activity为什么要添加flag，不添加会出现什么问题？
-- onNewIntent()调用时机？onNewIntent()具体有什么作用？
-- Activity遵循什么设计模式？知道ActivityThread这个类是干什么用的吗？
+- onNewIntent()调用时机？onNewIntent()具体有什么作用？Activity遵循什么设计模式？知道ActivityThread这个类是干什么用的吗？
 - 直接在Activity中创建一个thread跟在service中创建一个thread之间恩区别
 - 由A启动BActivity，A为栈内复用模式，B为标准模式，然后再次启动A或者杀死B，说说A，B的生命周期变化，为什么？
 
@@ -61,19 +61,13 @@
 
 
 ### 02.View工作原理问题
-#### 2.1 自定义View
 - requestLayout、invalidate与postInvalidate作用与区别，在requestLayout这个方法里面做了什么？
-- Requestlayout，onlayout，onDraw，DrawChild区别与联系？drawChild()是做什么用的？
-
-
-#### 2.2 View工作流程
+- requestLayout，onLayout，onDraw，DrawChild区别与联系？drawChild()是做什么用的？
 - LinerLayout跟RelativeLayout的绘制原理？RelativeLayout两次都测量什么……？
 - View绘制流程，当一个TextView的实例调用setText()方法后执行了什么？请说一下原理……
 - 什么是MeasureSpec，主要作用是什么？包含三种布局模式分别是什么？getWidth()方法和getMeasureWidth()区别呢？
-
-
-#### 2.3 ViewRoot和DecorView
 - View是如何绘制到屏幕上的？View的刷新机制是什么，有哪些重要的方法？
+- Canvas.save()跟Canvas.restore()的调用时机？Canvas的底层机制，绘制框架，硬件加速是什么原理，canvas lock的缓冲区是怎么回事
 
 
 
@@ -96,8 +90,7 @@
 
 ### 04.Android消息机制
 #### 4.1 Handler消息机制
-- 请说一下Android消息机制？[注意：这个问题太大，说的时候分类表达]
-- 子线程中是否可以new一个handler对象？会出现什么问题，为什么？
+- 请说一下Android消息机制？[注意：这个问题太大，说的时候分类表达]子线程中是否可以new一个handler对象？会出现什么问题，为什么？
 - Looper从消息队列中取出消息后，如何传递给handler？消息队列MessageQuee底层怎么实现的？
 - Handler、Thread和HandlerThread的差别 ？HandlerThread是怎么实现的？
 - Looper.loop()为什么不会阻塞主线程，IdleHandler（闲时机制）是做什么用的？
@@ -133,44 +126,35 @@
 
 
 ### 07.Android动画机制
-#### 7.1 帧动画和补间动画
-- 常见的动画有哪些？具体有哪些使用场景？
-- 动画的两种实现：setX跟setTranslationX区别？
-
-
-#### 7.2 属性动画
+- 常见的动画有哪些？具体有哪些使用场景？动画的两种实现：setX跟setTranslationX区别？
 - Animation动画框架实现原理？动画可以改变相应的事件和位置吗？为什么？差值器和估值器是做什么用的？
 - 补间动画和属性动画，对于作用于View，两者有什么区别？属性动画是如何改变View的属性的？
 
 
 ### 08.Android多媒体问题
-- 如何给控件的背景设置圆角。
+- 如何给控件的背景设置圆角。做图片圆角的原理是什么，平常有哪些优化操作
+- 从网络加载一个10M的图片，说下注意事项？如何预防OOM？如何计算一个Bitmap占用内存的大小，怎么保证加载Bitmap不产生内存溢出？
+
 
 
 ### 09.Android网络相关
-#### 9.1 网络请求基础
 - 数据层有统一的管理么，数据缓存是怎么做的，http请求等有提供统一管理么？
 - 网络请求缓存处理，okhttp如何处理网络缓存的？
 - 服务器只提供数据接收接口，在多线程或多进程条件下，如何保证数据的有序到达？ 
 - 网络请求：https请求如何保证安全性？Charles能抓https请求么？能抓的话那安全性在哪？app如何防止代理抓包？
 
 
-
-#### 9.2 网络拦截
-
-
-
 ### 10.Android数据相关问题
-#### 10.1 数据存储
 - SharePreference性能优化，可以做进程同步吗？SharedPreferences的应用场景，核心原理是什么？SharedPreferences是线程安全的吗？ 
 - SharedPreferences：两种提交方式，缺点，如何解决
 - Android如何在不压缩的情况下加载高清大图？Android里的内存缓存和磁盘缓存是怎么实现的。
-- android里面的两种序列化方式，如何实现的
+- android里面的两种序列化方式，如何实现的。Android为什么引入Parcelable？ 有没有尝试简化Parcelable的使用？ 
+- 什么是序列化，序列化的对象设置一个serialVersionUID有什么作用？Parcelable序列化是怎么实现的，Serializable和Parcelable在性能上那个更加高效，具体结合案例说说……
 
 
 ### 11.WebView相关问题
 - WebView优化了解吗，如何提高WebView的加载速度？Java和JS的相互调用怎么实现，有做过什么优化吗？
-- Webview内存泄露出现的原因，该如何解决？怎么样提高webView加载速度？
+- WebView内存泄露出现的原因，该如何解决？怎么样提高webView加载速度？
 - WebView的内核是什么，4.4后直接使用了Chrome，那么Chrome又有哪些好处呢？
 - js调用native方法，它底层的原理是什么？为什么js能调用到Java的方法？webkit提供了这个功能，那它是怎么实现的？js调用native的方法时，是同步的还是异步的?java方法return一个值，js那边能立即拿到么？通过js调用一个java方法，这个java方法都是@onJavaInterface注解过的，这个方法是运行在哪个线程？
 
@@ -183,97 +167,32 @@
 
 ### 13.Framwork相关问题
 - 描述一下冷启动的过程。冷启动就是在 Launcher 进程中开启另一个引用 Activity 的过程。
-
+- 说一下apk打包流程，apk安装流程，说一下apk如何减小体积的方法？
+- 从点击应用图标到进入应用，Android系统都做了哪些工作，期间涉及到的进程切换有哪些？
+- Android里的Intent传递的数据有大小限制吗，如何解决？intent和bundle有什么区别，intent常见的传递类型有哪些？
+- 说下你对多进程的理解，什么情况下要使用多进程，为什么要使用多进程，在多进程的情况下为什么要使用进程通讯
 
 
 ### 14.控件相关问题汇总
-
-
-#### 14.4 SurfaceView
-
-
-#### 14.4 TextureView
-
-
-
-#### 2.2.1.3 其他
-- 说说生产者-消费者问题，如何保证生产者不会在缓冲区满时加入数据，消费者也不会在缓冲区空时消耗数据？
-- 什么是序列化，序列化的对象设置一个serialVersionUID有什么作用？Parcelable序列化是怎么实现的，Serializable和Parcelable在性能上那个更加高效，具体结合案例说说……
-- 说一下apk打包流程，apk安装流程，说一下apk如何减小体积的方法？
-- 从网络加载一个10M的图片，说下注意事项？如何预防OOM？如何计算一个Bitmap占用内存的大小，怎么保证加载Bitmap不产生内存溢出？
-- 从点击应用图标到进入应用，Android系统都做了哪些工作，期间涉及到的进程切换有哪些？
-- Android里的Intent传递的数据有大小限制吗，如何解决？
-- SplashActivity中进行初始化MainActivity的参数，Splash没有初始化，AMS直接启动了MainActivity怎么办
-- Canvas.save()跟Canvas.restore()的调用时机？Canvas的底层机制，绘制框架，硬件加速是什么原理，canvas lock的缓冲区是怎么回事
-- 说一下四中引用的区别和使用场景，什么情况下会导致应用内存空间不足？弱引用和软引用有什么区别？
-- 了解APK的打包流程吗，描述一下？了解APK的安装流程吗，描述一下？
-- Android里的Intent传递的数据有大小限制吗，如何解决？intent和bundle有什么区别，intent常见的传递类型有哪些？
-- 手写单例(DCL)模式代码？为什么要这样设计？
 - SurfaceView和View的最本质的区别？SurfaceView为什么不会造成画面卡顿？它底部是如何实现的？
-- 对于Android APP闪退，可能的原因有哪些？请针对每种情况简述分析过程。ANR在bugly等第三方崩溃检测平台上有日志信息吗？是在哪里？
 - ViewPager使用细节，如何设置成每次只初始化当前的Fragment，其他的不初始化
-- 说下你对多进程的理解，什么情况下要使用多进程，为什么要使用多进程，在多进程的情况下为什么要使用进程通讯
-- Android为什么引入Parcelable？ 有没有尝试简化Parcelable的使用？ 
-- 消息推送原理是什么？如何实现心跳连接？
+- 说一下RecyclerView绘制步骤和复用机制，复用机制底层是用什么数据结构？聊聊RecyclerView，动画，缓存，数据绑定底层是如何实现的。如何自己实现RecyclerView的侧滑删除？
 
 
-## 3.Android高级之面试问题
-### 3.1.1 Android中多进程模式
+
+### 15.Android进程IPC
 - 常见的跨进程通信方式，AIDL的实现原理？
-- 服务器只提供数据接收接口，在多线程或多进程条件下，如何保证数据的有序到达？
-
-
-### 3.1.2 Android中IPC机制
 - 说一下你对IPC机制的理解？如果一个APP里面有多进程存在，请列举你所知道的全部IPC方法……
 - 说一下Binder大概是怎么实现的？既然有现有的IPC方式，为什么重新设计一套Binder机制呢。
 - Binder机制：ServiceManager什么时候注册的？这个是用来干嘛的？
 - Binder内核所在的进程是如何找到到Server跟Client进行通信的
 - ServiceManager是一个单独的进程，那么Server与ServiceManager通讯是靠什么呢？
 - Android Binder机制是做什么的，为什么选用Binder，原理了解吗？
-
-
-### 3.1.3 Android之JNI和NDK编程
-- 如何加载NDK库？如何在jni中注册native函数，有几种注册方法？
-- 微信支付宝支付调用时上层是如何封装AIDL的？
-- jni如何调用java层代码？Java如何调用c、c++语言？ 
 - AIDL解决了什么问题？AIDL如何使用？多进程场景遇见过么？谈谈对进程共享和线程安全的认识……
-- 什么是NDK库? 你用JNI来实现过什么功能吗？怎么实现的？ 
 
 
 
-### 3.1.4 Android之注解
-- 注解如何获取，反射为何耗性能？了解动态注解吗，说一下Retrfit网络加载框架是如何进行动态注解的？
-- 注解有哪些？写过注解吗？比如分析下butterKnife在bind()时的原理……注解如何实现一个findViewById
 
-
-### 3.1.5 Android之插件
-- 热修复原理，插件化是如何进行加载插件的？
-- 热修复,插件化是怎么实现的？如何做代码混淆的？如果使用第三方加固，那么热修复又会遇到什么问题？
-
-
-
-### 3.1.7 Android之流行库源码分析
-- Retrofit采用动态代理，，那么什么是动态代理，有何特点？
-- 使用过什么图片加载库，Glide 的源码设计哪里很微妙？说一下三级缓存的原理？描述一下内存缓存的容器？
-- 官方为什么会把 HttpClient 和 HttpUrlConnection 替换为 OkHttp 默认实现？它有什么好处？
-- RxJava的功能与原理实现？RxJava的作用，与平时使用的异步操作来比的优缺点？
-- 说一下RecyclerView绘制步骤和复用机制，复用机制底层是用什么数据结构？聊聊RecyclerView，动画，缓存，数据绑定底层是如何实现的。如何自己实现RecyclerView的侧滑删除？
-- 通过google提供的Gson解析json时，定义JavaBean的规则是什么？
-
-
-### 3.1.8 Android之热修复
-- 热修复的原理，你都了解过哪几种热修复框架
-
-
-## 4.Android架构之面试问题
-### 4.1.1 Android中架构设计
-- MVC MVP MVVM原理和区别？请绘制这几种架构模式的图形……
-
-
-#### 4.1.2 Android中设计模式
-- 说说你对设计模式的理解，开发过程中主要用到了哪些设计模式？【这个问题回答一定要是自己熟悉的，面试官一般是追问】
-- 手写常见的单例模式代码？synchronized修饰方法和修饰类有什么区别？写完后，请简述它们使用场景和利弊……
-- 适配器模式，装饰者模式，外观模式的异同？说下它们的使用场景有哪些？
 
 
 
